package com.zsx.design.pattern.structural.proxy.cglib;

public class TaoBaoPlatform {

    public String sellTicket() {
        return "TaoBao";
    }
}
