package com.zsx.design.pattern.structural.proxy.statical;

public interface ISell {

    String sellTicket();
}
