@startuml

Title "动态代理模式UML图"

interface InvocationHandler
interface ISell

ISell <|.. TaoBaoPlatform
InvocationHandler <|.. LogInvocationHandler

interface ISell {

    +String sellTicket();
}

class TaoBaoPlatform {

    +public String sellTicket() {}
}

class LogProxyFactory {

    +public Object getProxyInstance(Object target) {}
}


class LogInvocationHandler {

    -private Object target;

    +public LogInvocationHandler(Object target) {}

    +public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {}

    -private void before() {}

    -private void after() {}
}



@enduml